# ekege

./: .gitignore  Cargo.toml  JARGON.md  README.md  clippy.toml  rustfmt.toml
crates/ekege/: Cargo.toml
crates/ekege-integration/: Cargo.toml
crates/ekege-integration/src/: main.rs
crates/ekege-macros/: Cargo.toml
crates/ekege-macros/src/: discouraged.rs  equivalence.rs  lib.rs  map.rs  rewrite.rs  rule.rs  term.rs
crates/ekege/benches/: graph.rs
crates/ekege/src/: colt.rs  database.rs  domain.rs  id.rs  lib.rs  main.rs  map.rs  plan.rs  query.rs  rule.rs  term.rs  trie.rs
crates/ekege/src/extraction/: mod.rs  tree_extractor.rs
crates/ekege/src/query/: estimation.rs  graph.rs  mod.rs  optimizer.rs  plan.rs
crates/ekege/tests/: double_negative.rs  graph.rs
