[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Workspace members
ekege = { path = "./crates/ekege/" }
ekege-macros = { path = "./crates/ekege-macros" }

# Regular dependencies
indexmap = "2.2.6"
either = "1.13.0"
rustc-hash = "2.0.0"
bumpalo = { version = "3.16.0", features = ["collections", "allocator-api2"] }
hashbrown = "0.14.5"

# Macro-related dependencies
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"
proc-macro-crate = "3.1.0"

# Development dependenecies
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1

[profile.tests]
inherits = "dev"
opt-level = 3    # Needed for some integration tests
