[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Workspace members
ekege = { path = "./crates/ekege/" }
ekege-macros = { path = "./crates/ekege-macros" }

# Regular dependencies
indexmap = "2.6.0"
either = "1.13.0"
rustc-hash = "2.0.0"
bumpalo = { version = "3.16.0", features = ["collections", "allocator-api2"] }
hashbrown = "0.15.0"
bitfield-struct = "0.9.0"

# Macro-related dependencies
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = "2.0.79"
proc-macro-crate = "3.2.0"

# Development dependenecies
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
lto = true
codegen-units = 1
