[package]
name = "ekege"
version = "0.1.0"
edition = "2021"
description = "An E-graph library that's built like a database"
authors = ["Yoav Grimland <miestrode@proton.me>"]

[lints]
workspace = true

[dependencies]
# Workspace members
ekege-macros.workspace = true

# Regular dependencies
indexmap.workspace = true
either.workspace = true
rustc-hash.workspace = true
bumpalo.workspace = true
hashbrown.workspace = true
bitfield-struct.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "graph"
harness = false
